fixtures/compile_error/test/compile_error_test.exs
defmodule CompileErrorTest do
  use ExUnit.Case

  test "placeholder" do
    assert true
  end
end
